// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlainTextTitle > should render 1`] = `
<div
  class="_tc-editable-text-title_c91be1"
>
  <span
    aria-describedby="00000000-0000-4000-8000-000000000000"
    class="_tc-editable-text-wording_c91be1 tc-editable-text-wording"
  >
    text
  </span>
  <button
    aria-describedby="00000000-0000-4000-8000-000000000000"
    aria-label="Rename"
    class="_tc-editable-text-pencil_c91be1 tc-editable-text-pencil btn-icon-only btn btn-link"
    data-feature="my.custom.feature"
    name="action-edit"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="tc-svg-icon tc-icon _svg_bf5f45 tc-icon-name-talend-pencil"
      focusable="false"
      name="talend-pencil"
      pointer-events="none"
      shape-rendering="geometricPrecision"
    />
  </button>
</div>
`;

exports[`PlainTextTitle should render 1`] = `
<div
  class="theme-tc-editable-text-title"
>
  <span
    aria-describedby="42"
    class="theme-tc-editable-text-wording tc-editable-text-wording"
  >
    text
  </span>
  <button
    aria-describedby="42"
    aria-label="Rename"
    class="theme-tc-editable-text-pencil tc-editable-text-pencil btn-icon-only btn btn-link"
    data-feature="my.custom.feature"
    name="action-edit"
    type="button"
  >
    <span
      class="CoralIcon"
      name="talend-pencil"
    />
  </button>
</div>
`;
